chang the code of small gana（がな）

--- a/symbols.custom.yaml
+++ b/symbols.custom.yaml
@@ -82,11 +82,16 @@ punctuator:
     
 #假名
     
-    '\a': [ あ, ア, ぁ, ァ ]
-    '\i': [ い, イ, ぃ, ィ ]
-    '\u': [ う, ウ, ぅ, ゥ ]
-    '\e': [ え, エ, ぇ, ェ ]
-    '\o': [ お, オ, ぉ, ォ ]
+    '\a': [ あ, ア ]
+    '\xa': [ ぁ, ァ ]
+    '\i': [ い, イ ]
+    '\xi': [ ぃ, ィ ]
+    '\u': [ う, ウ ]
+    '\xu': [ ぅ, ゥ ]
+    '\e': [ え, エ ]
+    '\xe': [ ぇ, ェ ]
+    '\o': [ お, オ ]
+    '\xo': [ ぉ, ォ ]
 
     '\ka': [ か, カ ]
     '\ki': [ き, キ ]
@@ -104,8 +109,10 @@ punctuator:
     '\ta': [ た, タ ]
     '\ti': [ ち, チ ]
     '\chi': [ ち, チ ]
-    '\tu': [ つ, ツ, っ, ッ ]
-    '\tsu': [ つ, ツ, っ, ッ ]
+    '\tu': [ つ, ツ ]
+    '\xtu': [ っ, ッ ]
+    '\tsu': [ つ, ツ ]
+    '\xtsu': [ っ, ッ ]
     '\te': [ て, テ ]
     '\to': [ と, ト ]
     
@@ -128,9 +135,12 @@ punctuator:
     '\me': [ め, メ ]
     '\mo': [ も, モ ]
     
-    '\ya': [ や, ヤ, ゃ, ャ ]
-    '\yu': [ ゆ, ユ, ゅ, ュ ]
-    '\yo': [ よ, ヨ, ょ, ョ ]
+    '\ya': [ や, ヤ ]
+    '\xya': [ ゃ, ャ ]
+    '\yu': [ ゆ, ユ ]
+    '\xyu': [ ゅ, ュ ]
+    '\yo': [ よ, ヨ ]
+    '\xyo': [ ょ, ョ ]
     
     '\ra': [ ら, ラ ]
     '\ri': [ り, リ ]
@@ -138,7 +148,8 @@ punctuator:
     '\re': [ れ, レ ]
     '\ro': [ ろ, ロ ]
     
-    '\wa': [ わ, ワ, ゎ, ヮ ]
+    '\wa': [ わ, ワ ]
+    '\xwa': [ ゎ, ヮ ]
     '\wo': [ を, ヲ ]
     
     '\n': [ ん, ン, っ, ッ, － ]
