--- a/symbols.custom.yaml
+++ b/symbols.custom.yaml
@@ -70,163 +70,166 @@ punctuator:
     # '/xld': [ Α, Β, Γ, Δ, Ε, Ζ, Η, Θ, Ι, Κ, Λ, Μ, Ν, Ξ, Ο, Π, Ρ, Σ, Τ, Υ, Φ, Χ, Ψ, Ω ]
     '\alpha': [ α, Α ]
     '\beta': [ β, Β ]
+    '\gamma': [ γ, Γ ]
+    '\delta': [ δ, Δ ]
+    '\pi': [ Π, π ]
 #拼音、註音、聲調
-    '/py': [ ā, á, ǎ, à, ō, ó, ǒ, ò, ê, ē, é, ě, è, ī, í, ǐ, ì, ū, ú, ǔ, ù, ü, ǖ, ǘ, ǚ, ǜ, ń, ň ]
-    '/pya': [ ā, á, ǎ, à ]
-    '/pyo': [ ō, ó, ǒ, ò ]
-    '/pye': [ ē, é, ě, è, ê ]
-    '/pyi': [ ī, í, ǐ, ì ]
-    '/pyu': [ ū, ú, ǔ, ù ]
-    '/pyv': [ ǖ, ǘ, ǚ, ǜ, ü]
+    '\py': [ ā, á, ǎ, à, ō, ó, ǒ, ò, ê, ē, é, ě, è, ī, í, ǐ, ì, ū, ú, ǔ, ù, ü, ǖ, ǘ, ǚ, ǜ, ń, ň ]
+    '\pya': [ ā, á, ǎ, à ]
+    '\pyo': [ ō, ó, ǒ, ò ]
+    '\pye': [ ē, é, ě, è, ê ]
+    '\pyi': [ ī, í, ǐ, ì ]
+    '\pyu': [ ū, ú, ǔ, ù ]
+    '\pyv': [ ǖ, ǘ, ǚ, ǜ, ü]
     
     
 #假名
     
-    '\a': [ あ, ア ]
-    '\xa': [ ぁ, ァ ]
-    '\i': [ い, イ ]
-    '\xi': [ ぃ, ィ ]
-    '\u': [ う, ウ ]
-    '\xu': [ ぅ, ゥ ]
-    '\e': [ え, エ ]
-    '\xe': [ ぇ, ェ ]
-    '\o': [ お, オ ]
-    '\xo': [ ぉ, ォ ]
+    '/a': [ あ, ア ]
+    '/xa': [ ぁ, ァ ]
+    '/i': [ い, イ ]
+    '/xi': [ ぃ, ィ ]
+    '/u': [ う, ウ ]
+    '/xu': [ ぅ, ゥ ]
+    '/e': [ え, エ ]
+    '/xe': [ ぇ, ェ ]
+    '/o': [ お, オ ]
+    '/xo': [ ぉ, ォ ]
 
-    '\ka': [ か, カ ]
-    '\ki': [ き, キ ]
-    '\ku': [ く, ク ]
-    '\ke': [ け, ケ ]
-    '\ko': [ こ, コ ]
+    '/ka': [ か, カ ]
+    '/ki': [ き, キ ]
+    '/ku': [ く, ク ]
+    '/ke': [ け, ケ ]
+    '/ko': [ こ, コ ]
    
-    '\sa': [ さ, サ ]
-    '\si': [ し, シ ]
-    '\shi': [ し, シ ]
-    '\su': [ す, ス ]
-    '\se': [ せ, セ ]
-    '\so': [ そ, ソ ]
+    '/sa': [ さ, サ ]
+    '/si': [ し, シ ]
+    '/shi': [ し, シ ]
+    '/su': [ す, ス ]
+    '/se': [ せ, セ ]
+    '/so': [ そ, ソ ]
  
-    '\ta': [ た, タ ]
-    '\ti': [ ち, チ ]
-    '\chi': [ ち, チ ]
-    '\tu': [ つ, ツ ]
-    '\xtu': [ っ, ッ ]
-    '\tsu': [ つ, ツ ]
-    '\xtsu': [ っ, ッ ]
-    '\te': [ て, テ ]
-    '\to': [ と, ト ]
+    '/ta': [ た, タ ]
+    '/ti': [ ち, チ ]
+    '/chi': [ ち, チ ]
+    '/tu': [ つ, ツ ]
+    '/xtu': [ っ, ッ ]
+    '/tsu': [ つ, ツ ]
+    '/xtsu': [ っ, ッ ]
+    '/te': [ て, テ ]
+    '/to': [ と, ト ]
     
-    '\na': [ な, ナ ]
-    '\ni': [ に, ニ ]
-    '\nu': [ ぬ, ヌ ]
-    '\ne': [ ね, ネ ]
-    '\no': [ の, ノ ]
+    '/na': [ な, ナ ]
+    '/ni': [ に, ニ ]
+    '/nu': [ ぬ, ヌ ]
+    '/ne': [ ね, ネ ]
+    '/no': [ の, ノ ]
    
-    '\ha': [ は, ハ ]
-    '\hi': [ ひ, ヒ ]
-    '\hu': [ ふ, フ ]
-    '\fu': [ ふ, フ ]
-    '\he': [ へ, ヘ ]
-    '\ho': [ ほ, ホ ]
+    '/ha': [ は, ハ ]
+    '/hi': [ ひ, ヒ ]
+    '/hu': [ ふ, フ ]
+    '/fu': [ ふ, フ ]
+    '/he': [ へ, ヘ ]
+    '/ho': [ ほ, ホ ]
     
-    '\ma': [ ま, マ ]
-    '\mi': [ み, ミ ]
-    '\mu': [ む, ム ]
-    '\me': [ め, メ ]
-    '\mo': [ も, モ ]
+    '/ma': [ ま, マ ]
+    '/mi': [ み, ミ ]
+    '/mu': [ む, ム ]
+    '/me': [ め, メ ]
+    '/mo': [ も, モ ]
     
-    '\ya': [ や, ヤ ]
-    '\xya': [ ゃ, ャ ]
-    '\yu': [ ゆ, ユ ]
-    '\xyu': [ ゅ, ュ ]
-    '\yo': [ よ, ヨ ]
-    '\xyo': [ ょ, ョ ]
+    '/ya': [ や, ヤ ]
+    '/xya': [ ゃ, ャ ]
+    '/yu': [ ゆ, ユ ]
+    '/xyu': [ ゅ, ュ ]
+    '/yo': [ よ, ヨ ]
+    '/xyo': [ ょ, ョ ]
     
-    '\ra': [ ら, ラ ]
-    '\ri': [ り, リ ]
-    '\ru': [ る, ル ]
-    '\re': [ れ, レ ]
-    '\ro': [ ろ, ロ ]
+    '/ra': [ ら, ラ ]
+    '/ri': [ り, リ ]
+    '/ru': [ る, ル ]
+    '/re': [ れ, レ ]
+    '/ro': [ ろ, ロ ]
     
-    '\wa': [ わ, ワ ]
-    '\xwa': [ ゎ, ヮ ]
-    '\wo': [ を, ヲ ]
+    '/wa': [ わ, ワ ]
+    '/xwa': [ ゎ, ヮ ]
+    '/wo': [ を, ヲ ]
     
-    '\n': [ ん, ン, っ, ッ, － ]
-    '\nn': [ ん, ン, っ, ッ, － ]
+    '/n': [ ん, ン, っ, ッ, － ]
+    '/nn': [ ん, ン, っ, ッ, － ]
     
-    '\ga': [ が, ガ ]
-    '\gi': [ ぎ, ギ ]
-    '\gu': [ ぐ, グ ]
-    '\ge': [ げ, ゲ ]
-    '\go': [ ご, ゴ ]
+    '/ga': [ が, ガ ]
+    '/gi': [ ぎ, ギ ]
+    '/gu': [ ぐ, グ ]
+    '/ge': [ げ, ゲ ]
+    '/go': [ ご, ゴ ]
     
-    '\za': [ ざ, ザ ]
-    '\zi': [ じ, ジ ]
-    '\zu': [ ず, ズ ]
-    '\ze': [ ぜ, ゼ ]
-    '\zo': [ ぞ, ゾ ]
+    '/za': [ ざ, ザ ]
+    '/zi': [ じ, ジ ]
+    '/zu': [ ず, ズ ]
+    '/ze': [ ぜ, ゼ ]
+    '/zo': [ ぞ, ゾ ]
     
-    '\da': [ だ, ダ ]
-    '\di': [ ぢ, ヂ ]
-    '\du': [ づ, ヅ ]
-    '\de': [ で, デ ]
-    '\do': [ ど, ド ]
+    '/da': [ だ, ダ ]
+    '/di': [ ぢ, ヂ ]
+    '/du': [ づ, ヅ ]
+    '/de': [ で, デ ]
+    '/do': [ ど, ド ]
     
-    '\ba': [ ば, バ ]
-    '\bi': [ び, ビ ]
-    '\bu': [ ぶ, ブ ]
-    '\be': [ べ, ベ ]
-    '\bo': [ ぼ, ボ ]
+    '/ba': [ ば, バ ]
+    '/bi': [ び, ビ ]
+    '/bu': [ ぶ, ブ ]
+    '/be': [ べ, ベ ]
+    '/bo': [ ぼ, ボ ]
     
-    '\pa': [ ぱ, パ ]
-    '\pi': [ ぴ, ピ ]
-    '\pu': [ ぷ, プ ]
-    '\pe': [ ぺ, ペ ]
-    '\po': [ ぽ, ポ ]
+    '/pa': [ ぱ, パ ]
+    '/pi': [ ぴ, ピ ]
+    '/pu': [ ぷ, プ ]
+    '/pe': [ ぺ, ペ ]
+    '/po': [ ぽ, ポ ]
     
-    '\kya': [ きゃ, キャ]
-    '\kyu': [ きゅ, キュ]
-    '\kyo': [ きょ, キョ]
-    '\sya': [ しゃ, シャ]
-    '\syu': [ しゅ, シュ]
-    '\syo': [ しょ, ショ]
-    '\sha': [ しゃ, シャ]
-    '\shu': [ しゅ, シュ]
-    '\sho': [ しょ, ショ]
-    '\cya': [ ちゃ, チャ]
-    '\cyu': [ ちゅ, チュ]
-    '\cyo': [ ちょ, チョ]
-    '\cha': [ ちゃ, チャ]
-    '\chu': [ ちゅ, チュ]
-    '\cho': [ ちょ, チョ]
-    '\nya': [ にゃ, ニャ]
-    '\nyu': [ にゅ, ニュ]
-    '\nyo': [ にょ, ニョ]
-    '\hya': [ ひゃ, ヒャ]
-    '\hyu': [ ひゅ, ヒュ]
-    '\hyo': [ ひょ, ヒョ]
-    '\mya': [ みゃ, ミャ]
-    '\myu': [ みゅ, ミュ]
-    '\myo': [ みょ, ミョ]
-    '\rya': [ りゃ, リャ]
-    '\ryu': [ りゅ, リュ]
-    '\ryo': [ りょ, リョ]
-    '\gya': [ ぎゃ, ギャ]
-    '\gyu': [ ぎゅ, ギュ]
-    '\gyo': [ ぎょ, ギョ]
-    '\ja': [ じゃ, ジャ]
-    '\ju': [ じゅ, ジュ]
-    '\jo': [ じょ, ジョ]
-    '\zya': [ じゃ, ジャ]
-    '\zyu': [ じゅ, ジュ]
-    '\zyo': [ じょ, ジョ]
-    '\bya': [ びゃ, ビャ]
-    '\byu': [ びゅ, ビュ]
-    '\byo': [ びょ, ビョ]
-    '\pya': [ ぴゃ, ピャ]
-    '\pyu': [ ぴゅ, ピュ]
-    '\pyo': [ ぴょ, ピョ]
-    '\dya': [ ぢゃ, ヂャ]
-    '\dyu': [ ぢゅ, ヂュ]
-    '\dyo': [ ぢょ, ヂョ]
+    '/kya': [ きゃ, キャ]
+    '/kyu': [ きゅ, キュ]
+    '/kyo': [ きょ, キョ]
+    '/sya': [ しゃ, シャ]
+    '/syu': [ しゅ, シュ]
+    '/syo': [ しょ, ショ]
+    '/sha': [ しゃ, シャ]
+    '/shu': [ しゅ, シュ]
+    '/sho': [ しょ, ショ]
+    '/cya': [ ちゃ, チャ]
+    '/cyu': [ ちゅ, チュ]
+    '/cyo': [ ちょ, チョ]
+    '/cha': [ ちゃ, チャ]
+    '/chu': [ ちゅ, チュ]
+    '/cho': [ ちょ, チョ]
+    '/nya': [ にゃ, ニャ]
+    '/nyu': [ にゅ, ニュ]
+    '/nyo': [ にょ, ニョ]
+    '/hya': [ ひゃ, ヒャ]
+    '/hyu': [ ひゅ, ヒュ]
+    '/hyo': [ ひょ, ヒョ]
+    '/mya': [ みゃ, ミャ]
+    '/myu': [ みゅ, ミュ]
+    '/myo': [ みょ, ミョ]
+    '/rya': [ りゃ, リャ]
+    '/ryu': [ りゅ, リュ]
+    '/ryo': [ りょ, リョ]
+    '/gya': [ ぎゃ, ギャ]
+    '/gyu': [ ぎゅ, ギュ]
+    '/gyo': [ ぎょ, ギョ]
+    '/ja': [ じゃ, ジャ]
+    '/ju': [ じゅ, ジュ]
+    '/jo': [ じょ, ジョ]
+    '/zya': [ じゃ, ジャ]
+    '/zyu': [ じゅ, ジュ]
+    '/zyo': [ じょ, ジョ]
+    '/bya': [ びゃ, ビャ]
+    '/byu': [ びゅ, ビュ]
+    '/byo': [ びょ, ビョ]
+    '/pya': [ ぴゃ, ピャ]
+    '/pyu': [ ぴゅ, ピュ]
+    '/pyo': [ ぴょ, ピョ]
+    '/dya': [ ぢゃ, ヂャ]
+    '/dyu': [ ぢゅ, ヂュ]
+    '/dyo': [ ぢょ, ヂョ]
