--- a/wubi86.custom.dict.yaml
+++ b/wubi86.custom.dict.yaml
@@ -136818,6 +136818,9 @@ nm	zzdw	895
 吐槽	kfsg	100000000
 补番	puto	100000000
 纳尼	xmnx	10000
+载荷	faaw	10000000
+心塞	nypf	10000000
+
 
 # === 絵文字 emoji ===
 (@_@)	lwmv	0
