--- a/symbols.custom.yaml
+++ b/symbols.custom.yaml
@@ -81,8 +81,22 @@ punctuator:
     '\pyi': [ ī, í, ǐ, ì ]
     '\pyu': [ ū, ú, ǔ, ù ]
     '\pyv': [ ǖ, ǘ, ǚ, ǜ, ü]
-    
-    
+#数学符号
+    '\neq': '≠'
+    '\approx': '≈'
+    '\cap': '∩'
+    '\cup': '∪'
+    '\emptyset': 'Ø'
+    '\geq': '≥'
+    '\leq': '≤'
+    '\partial': '∂'
+    '\square': '²' 
+    '\cubic': '³'
+    '\pm': '±'
+# 其它
+    '\male': '♂'
+    '\female': '♀'
+  
 #假名
     
     '/a': [ あ, ア ]
