20161225-五笔86单字版

--- a/symbols.custom.yaml
+++ b/symbols.custom.yaml
@@ -96,6 +96,11 @@ punctuator:
 # 其它
     '\male': '♂'
     '\female': '♀'
+    '\rightarrow': '→'
+    '\leftarrow': '←'
+    '\uparrow': '↑'
+    '\downarrow': '↓'
+    '\tm': '™'
   
 #假名
     
