--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,6 +1,7 @@
 patch:
   schema_list:
     - {schema: wubi86}
+    - {schema: wubi86.single}
     - {schema: jyutping}
     - {schema: double_pinyin_flypy}
   switcher/hotkeys:
