--- a/wubi86.single.custom.dict.yaml
+++ b/wubi86.single.custom.dict.yaml
@@ -11276,6 +11276,8 @@ columns:
 苉	aaqb	13800 
 辊	lj	9530 
 
+骼	metk
+
 係	wtxi
 嗰	kwld
 啲	krqy
@@ -11284,6 +11286,10 @@ columns:
 咁	kafg
 揿	rqqw
 攰	fclv
+诶	yctd
+诶	yct
+嘅	kvcq
+佢	wang
 
 (¦3[▓▓])	htip
 (╯°Д°）╯︵ ┻━┻	rrhj
@@ -11292,5 +11298,10 @@ columns:
 ╮(╯_╰)╭	rcrt	0 
 ╮(╯▽╰)╭	rcrt	1 
 _(:3」∠)_	khwy	2 
-_(┐「ε:)_	hkwy	1 
-＿ﾉ乙(､ﾝ､)_	khwy	0 
+
+(ง •̀_•́)ง	lkim
+|ω・）	pdnr
+Ծ‸Ծ	wtny
+⊙▽⊙	wftc
+(ｏ￣ω￣)╯	raud
+(⁄ ⁄•⁄ω⁄•⁄ ⁄)	pdud
