--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -6,6 +6,7 @@ patch:
     - {schema: double_pinyin_flypy}
   switcher/hotkeys:
     - "Control+Shift+F4"
+    - "Control+grave"
   key_binder:
     bindings:
       - {accept: "Shift+Tab", send: "Shift+Left", when: composing}
