20180315-congratulation to weasel 0.10.0

--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,10 +1,7 @@
 patch:
   schema_list:
-    - {schema: wubi86}
     - {schema: wubi86.single}
-    - {schema: jyutping}
-    - {schema: double_pinyin_flypy}
-  switcher/hotkeys:
+  "switcher/hotkeys":
     - "Control+Shift+F4"
     - "Control+grave"
   key_binder:
